JavaDocs implementation and preparation for more JavaDocs, also some readability improvement.